tests/NormalTests/paczka1/small_fuzzy/19758184.err
Error in line 1: FJhO A3 71,0
Error in line 2: FJhO S678 8,9
Error in line 9: A385 S678 26,4
